Fixed a bug with the height on mobile

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -103,7 +103,6 @@ textarea {
 .app {
     width: 100vw;
     height: 100vh;
-    height: -webkit-fill-available;
     padding: 20px;
     padding-top: 0px;
     @include flex;
